--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="#services">Services</a></li>
-          <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link" href="#portfolio">Projects</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -517,11 +517,18 @@ Currently, I’m focused on full stack development for web and mobile.
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>Korba ,Nabeul</p><br><p>Manar1 ,Nabeul</p>
+            <p>Manar1 ,Tunis</p>
+          </div>
+        </div>
+        <div class="col-md-6 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bx-map"></i>
+            <h3>Email Me</h3>
+            <p>safaziedi070@gmail.com</p>
           </div>
         </div>
 
-        <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+        <!-- <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
@@ -532,21 +539,21 @@ Currently, I’m focused on full stack development for web and mobile.
               <a href="https://www.linkedin.com/in/safa-ziadi-b0024b1b3/" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
-          <div class="info-box">
+          <!-- <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
             <p>safaziedi070@gmail.com</p>
-          </div>
+          </div> -->
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
-          <div class="info-box">
+          <!-- <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
             <p>+216 51485031</p>
-          </div>
+          </div> -->
         </div>
       </div>
 
