--- a/index.html
+++ b/index.html
@@ -92,13 +92,12 @@ trying to collaborate with any OpenSource projects
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>7 january 2001</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>ziedisafa.github.io</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+216 51485031</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Nabeul,Tunisia</span> <span>/ Manar1,Tunisia</span></li>
+                <!-- <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+216 51485031</span></li> -->
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Manar1,Tunisia</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>computer engineering</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>safaziedi070@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
@@ -284,7 +283,6 @@ Currently, I’m focused on full stack development for web and mobile.
             <p>
             <ul>
               <li>Faculty of Science Tunis (FST)</li>
-              <li>+216 51 485 031</li>
               <li>safaziedi070@gmail</li>
             </ul>
             </p>
